feat: seo attempt and deployment

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fifo_icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>
+      FIFO Page Replacement Algorithm Visualizer by University of Cebu
+    </title>
+    <meta
+      name="description"
+      content="Learn and visualize the FIFO Page Replacement Algorithm with simulator/generator animations, examples, and an interactive quiz. Perfect for IT/CS students."
+    />
+    <meta
+      name="keywords"
+      content="FIFO, FIFO Generator, FIFO Simulator, FIFO UC, FIFO University of Cebu, Page Replacement Algorithm, First-In-First-Out, Visualizer, Animation, Quiz, Computer Science"
+    />
+    <meta name="author" content="Ralph Adriane P. Dilao" />
+    <meta
+      property="og:title"
+      content="FIFO Page Replacement Visualizer Generaator"
+    />
+    <meta
+      property="og:description"
+      content="Visualize the FIFO Page Replacement Algorithm with animations, examples, and a quiz!"
+    />
+    <meta
+      property="og:image"
+      content="https://fifo-simulator.vercel.app/fifo_image.jpg"
+    />
+    <meta property="og:url" content="https://fifo-simulator.vercel.app" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
